--- a/browser/index.html
+++ b/browser/index.html
@@ -149,6 +149,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
     <script src="zephra.js"></script>
+    <script src="modal.js"></script>
 </body>
 
             select.value = config.get(select.name.replace("config_", ""));
