--- a/browser/index.html
+++ b/browser/index.html
@@ -149,157 +149,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
     <script src="zephra.js"></script>
-    <script src="modal.js"></script>
+    <script src="../modals.js"></script>
 </body>
-
-            select.value = config.get(select.name.replace("config_", ""));
-        });
-
-        function openUrl(url) {
-            if(!url) return;
-            require("electron").shell.openExternal(url);
-        }
-
-        function updateTheme() {
-            let theme = config.get("colorTheme");
-
-            if(config.get("colorTheme") === "os") theme = nativeTheme.shouldUseDarkColors ? "dark" : "white";
-            document.querySelector("body").setAttribute("data-theme", theme);
-        }
-
-        function updateSCPM() {
-            const e = {
-                cb: document.querySelector("div.setting input[name='config_performanceMode']"),
-                cs: document.querySelector("div.setting input[name='config_show']"),
-                cp: document.querySelector("div.setting input[name='config_hideOnPause']")
-            };
-
-            if(e.cb.checked) {
-                if(config.get("show")) e.cs.disabled = true;
-                e.cp.checked = true;
-                e.cp.disabled = true;
-            } else {
-                if(config.get("show")) e.cs.disabled = false;
-                e.cp.disabled = false;
-            }
-        }
-
-        function updateLanguage() {
-            const language = config.get("language");
-
-            langString = require(`./language/${language}.json`);
-
-            ipcRenderer.send('language-change', {"lang": language});
-
-            document.querySelectorAll("div.setting label").forEach((ele) => {
-                const ls = langString.settings.config[ele.getAttribute("for").replace("config_", "")]
-                if(ls) ele.textContent = ls
-            });
-
-            document.querySelectorAll(".extra span").forEach((ele) => {
-                const ls = langString.settings.extra[ele.parentElement.id]
-                if(ls) ele.textContent = ls
-            });
-        }
-
-        function newModal(title, description, buttons) {
-            const e = {
-                modal: document.createElement("div"),
-                title: document.createElement("h1"),
-                description: document.createElement("p"),
-                body: document.body
-            }
-
-            e.body.appendChild(e.modal);
-            e.modal.appendChild(e.title);
-            e.modal.appendChild(e.description);
-
-            e.modal.classList.add("modal");
-            e.title.classList.add("title");
-            e.description.classList.add("description");
-
-            e.title.innerHTML = title;
-            e.description.innerHTML = description;
-
-            e.modal.id = generateEleId();
-
-            for (let i = 0; i < buttons.length; i++) {
-                if(i > 2) return;
-                const btn = buttons[i],
-                    ele = document.createElement("p");
-
-                ele.classList.add("btn");
-                ele.classList.add(btn.style);
-                if(i === 2) ele.classList.add("btn-last");
-                ele.innerHTML = btn.text;
-
-                if(btn.events) {
-                    for (let i2 = 0; i2 < buttons[i].events.length; i2++) {
-                        const event = buttons[i].events[i2];
-                        
-                        ele.setAttribute(event.name, event.value);
-                    }
-                }
-
-                e.modal.appendChild(ele);
-            }
-
-            if(e.body.classList.contains("modalIsOpen")) e.modal.style.display = "none", e.modal.classList.add("awaiting");
-            else e.body.classList.add("modalIsOpen");
-        }
-
-        function closeModal(id) {
-            const e = document.querySelector(`div.modal#${id}`);
-            e.style.display = "none";
-            document.body.classList.remove("modalIsOpen");
-
-            if(document.querySelectorAll("div.modal.awaiting").length > 0) openModal(document.querySelectorAll("div.modal.awaiting")[0].id);
-        }
-
-        function openModal(id) {
-            const e = document.querySelector(`div.modal#${id}`);
-            e.style.display = "block";
-            e.classList.remove("awaiting");
-            document.body.classList.add("modalIsOpen");
-        }
-
-        function deleteModal(id) {
-            const e = document.querySelector(`div.modal#${id}`);
-            e.remove();
-            document.body.classList.remove("modalIsOpen");
-
-            if(document.querySelectorAll("div.modal.awaiting").length > 0) openModal(document.querySelectorAll("div.modal.awaiting")[0].id);
-        }
-
-        function sendUserCount() {
-            const xhr = new XMLHttpRequest();
-
-            xhr.open("POST", "https://amrpc.n0chteil.xyz/userCount.php", true);
-            xhr.setRequestHeader('Content-Type', 'application/json');
-            xhr.send();
-        }
-
-        function generateEleId() {
-            let result = '',
-                characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
-
-            for (let i = 0; i < characters.length; i++) result += characters.charAt(Math.floor(Math.random() * characters.length));
-
-            return result;
-        }
-
-        function updateDataChangelog(k, v) {
-            let changelog = appData.get("changelog");
-
-            changelog[k] = v;
-
-            appData.set("changelog", changelog);
-        }
-
-        app.restart = () => {
-            app.relaunch();
-            app.exit();
-        }
-    </script>
 </body>
 </html>
