--- a/browser/index.html
+++ b/browser/index.html
@@ -65,7 +65,6 @@
                     <select name="config_colorTheme">
                         <option value="dark">Darkmode</option>
                         <option value="white">Whitemode</option>
-                        <option value="sunsetrise">Whitemode until Sunrise</option>
                         <option value="os">System theme</option>
                     </select>
                     <label for="config_colorTheme">Preferred color theme</label>
@@ -85,6 +84,14 @@
                         <option value="applemusic-logo-rainbow">Rainbow</option>
                     </select>
                     <label for="config_cover">RPC logo</label>
+                </div>
+
+                <div class="setting">
+                    <select name="config_appleMusicElectron" rR="true">
+                        <option value="true">Apple Music Electron</option>
+                        <option value="false">iTunes</option>
+                    </select>
+                    <label for="config_appleMusicElectron">Choose your service</label>
                 </div>
 
                 <div class="setting">
