--- a/browser/index.html
+++ b/browser/index.html
@@ -62,46 +62,46 @@
 
             <div class="settingsLeft">
                 <div class="setting">
+                    <label for="config_colorTheme">Preferred color theme</label>
                     <select name="config_colorTheme">
                         <option value="dark">Darkmode</option>
                         <option value="white">Whitemode</option>
                         <option value="os">System theme</option>
                     </select>
-                    <label for="config_colorTheme">Preferred color theme</label>
                 </div>
 
                 <div class="setting">
+                    <label for="config_language">App language</label>
                     <select name="config_language">
                         <option value="en_US">English (US)</option>
                         <option value="de_DE">Deutsch (DE)</option>
                     </select>
-                    <label for="config_language">App language</label>
                 </div>
 
                 <div class="setting">
+                    <label for="config_cover">RPC logo</label>
                     <select name="config_cover">
                         <option value="applemusic-logo">Default</option>
                         <option value="applemusic-logo-rainbow">Rainbow</option>
                     </select>
-                    <label for="config_cover">RPC logo</label>
                 </div>
 
                 <div class="setting">
+                    <label for="config_appleMusicElectron">Choose your service</label>
                     <select name="config_appleMusicElectron" rR="true">
                         <option value="true">Apple Music Electron</option>
                         <option value="false">iTunes</option>
                     </select>
-                    <label for="config_appleMusicElectron">Choose your service</label>
                 </div>
 
                 <div class="setting">
-                    <input type="text" name="config_rpcDetails">
                     <label for="config_rpcDetails">Presence details</label>
+                    <input type="text" name="config_rpcDetails">
                 </div>
 
                 <div class="setting">
-                    <input type="text" name="config_rpcState">
                     <label for="config_rpcState">Presence state</label>
+                    <input type="text" name="config_rpcState">
                 </div>
             </div>
         </form>
@@ -154,9 +154,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="script.js"></script>
-    <script src="zephra.js"></script>
-    <script src="../modals.js"></script>
+    <script src="renderer.js"></script>
+    <!-- <script src="zephra.js"></script>
+    <script src="../modals.js"></script> -->
 </body>
 </body>
 </html>
