service setting update

--- a/browser/index.html
+++ b/browser/index.html
@@ -28,7 +28,7 @@
 
     <div class="content">
         <form id="config">
-            <div class="settingsRight">
+            <div class="settings">
                 <div class="setting">
                     <input type="checkbox" name="config_autolaunch">
                     <label for="config_autolaunch">Autolaunch</label>
@@ -58,9 +58,7 @@
                     <input type="checkbox" name="config_listenAlong">
                     <label for="config_listenAlong">Enable listen along</label>
                 </div>
-            </div>
 
-            <div class="settingsLeft">
                 <div class="setting">
                     <label for="config_colorTheme">Preferred color theme</label>
                     <select name="config_colorTheme">
@@ -87,10 +85,10 @@
                 </div>
 
                 <div class="setting">
-                    <label for="config_appleMusicElectron">Choose your service</label>
-                    <select name="config_appleMusicElectron" rR="true">
-                        <option value="true">Apple Music Electron</option>
-                        <option value="false">iTunes</option>
+                    <label for="config_service">Choose your service</label>
+                    <select name="config_service" rR="true">
+                        <option value="ame">Apple Music Electron</option>
+                        <option value="itunes">iTunes</option>
                     </select>
                 </div>
 
