System theme, changelog, only open https URLs

--- a/browser/index.html
+++ b/browser/index.html
@@ -45,8 +45,8 @@
                 </div>
 
                 <div class="setting">
-                    <input type="checkbox" name="config_showAlbumCover">
-                    <label for="config_showAlbumCover">Show album art when available</label>
+                    <input type="checkbox" name="config_showAlbumArtwork">
+                    <label for="config_showAlbumArtwork">Show artwork of the album</label>
                 </div>
 
                 <div class="setting">
@@ -62,8 +62,8 @@
                 <div class="setting">
                     <label for="config_colorTheme">Preferred color theme</label>
                     <select name="config_colorTheme">
-                        <option value="dark">Darkmode</option>
-                        <option value="white">Whitemode</option>
+                        <option value="dark">Dark</option>
+                        <option value="white">White</option>
                         <option value="os">System theme</option>
                     </select>
                 </div>
